# rust-grpc-demo

./: Cargo.toml  README.md  build.rs
proto/: user.proto
src/: client.rs  server.rs
