[package]
name = "grpc_demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "*"
